Fixes spacing between power slots

--- a/src/components/EnhancementBar/styles.module.scss
+++ b/src/components/EnhancementBar/styles.module.scss
@@ -2,7 +2,7 @@
 
 .EnhancementBar {
   display: flex;
-  width: 80%;
+  width: fit-content;
 
   top: 18px;
   left: 10px;
